--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mypythondockerrepo
-        image: myacrrepo312.azurecr.io/akannan1087/mypythondockerrepo:#{Build.BuildId}#
+        image: containerregistry00122.azurecr.io/nagarrianharshit/python-docker-aks:#{Build.BuildId}#
         ports:
         - containerPort: 5000
 # service type loadbalancer       
